pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-640-hard_line_breaks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/640-hard_line_breaks.md
---
[33mcode   span[0m
